--- a/web/css/main.css
+++ b/web/css/main.css
@@ -4476,24 +4476,78 @@ header {
 }
 @media (min-width: 992px) {
   .question .list-group.multipleLayout {
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+    -webkit-box-direction: normal;
+    -moz-box-direction: normal;
+    -webkit-box-orient: horizontal;
+    -moz-box-orient: horizontal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
     flex-direction: row;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
     flex-wrap: wrap;
-    justify-content: space-around;
-    align-content: flex-start;
-    align-items: stretch;
+    -webkit-box-pack: start;
+    -moz-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
+    justify-content: flex-start;
+    -ms-flex-line-pack: distribute;
+    -webkit-align-content: space-around;
+    align-content: space-around;
+    -webkit-box-align: strech;
+    -moz-box-align: strech;
+    -webkit-align-items: strech;
+    -ms-flex-align: strech;
+    align-items: strech;
     padding: 0 10px;
   }
   .question .list-group.multipleLayout .list-group-item {
+    -webkit-box-ordinal-group: 1;
+    -moz-box-ordinal-group: 1;
+    -webkit-order: 0;
+    -ms-flex-order: 0;
     order: 0;
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -webkit-flex: 1 0 50%;
+    -ms-flex: 1 0 50%;
     flex: 1 0 50%;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
     align-self: auto;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+    -webkit-box-direction: normal;
+    -moz-box-direction: normal;
+    -webkit-box-orient: horizontal;
+    -moz-box-orient: horizontal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
     flex-direction: row;
-    flex-wrap: nowrap;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: start;
+    -moz-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
     justify-content: flex-start;
-    align-content: flex-start;
-    align-items: stretch;
+    -ms-flex-line-pack: distribute;
+    -webkit-align-content: space-around;
+    align-content: space-around;
+    -webkit-box-align: strech;
+    -moz-box-align: strech;
+    -webkit-align-items: strech;
+    -ms-flex-align: strech;
+    align-items: strech;
   }
   .question .list-group.multipleLayout .list-group-item:nth-child(odd) {
     margin-left: -10px;
@@ -4507,19 +4561,63 @@ header {
   }
   .question .list-group.multipleLayout .list-group-item .checkbox,
   .question .list-group.multipleLayout .list-group-item .radio {
+    -webkit-box-ordinal-group: 1;
+    -moz-box-ordinal-group: 1;
+    -webkit-order: 0;
+    -ms-flex-order: 0;
     order: 0;
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -webkit-flex: 1 0 100%;
+    -ms-flex: 1 0 100%;
     flex: 1 0 100%;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
+    display: -webkit-box;
+    display: -moz-box;
+    display: -ms-flexbox;
+    display: -webkit-flex;
     display: flex;
+    -webkit-box-direction: normal;
+    -moz-box-direction: normal;
+    -webkit-box-orient: horizontal;
+    -moz-box-orient: horizontal;
+    -webkit-flex-direction: row;
+    -ms-flex-direction: row;
     flex-direction: row;
-    flex-wrap: nowrap;
+    -webkit-flex-wrap: wrap;
+    -ms-flex-wrap: wrap;
+    flex-wrap: wrap;
+    -webkit-box-pack: start;
+    -moz-box-pack: start;
+    -webkit-justify-content: flex-start;
+    -ms-flex-pack: start;
     justify-content: flex-start;
-    align-content: flex-start;
-    align-items: stretch;
+    -ms-flex-line-pack: distribute;
+    -webkit-align-content: space-around;
+    align-content: space-around;
+    -webkit-box-align: strech;
+    -moz-box-align: strech;
+    -webkit-align-items: strech;
+    -ms-flex-align: strech;
+    align-items: strech;
   }
   .question .list-group.multipleLayout .list-group-item .checkbox label,
   .question .list-group.multipleLayout .list-group-item .radio label {
+    -webkit-box-ordinal-group: 1;
+    -moz-box-ordinal-group: 1;
+    -webkit-order: 0;
+    -ms-flex-order: 0;
     order: 0;
+    -webkit-box-flex: 1;
+    -moz-box-flex: 1;
+    -webkit-flex: 1 0 100%;
+    -ms-flex: 1 0 100%;
     flex: 1 0 100%;
+    -webkit-align-self: auto;
+    -ms-flex-item-align: auto;
+    align-self: auto;
   }
 }
 .question .list-group .list-group-item {
@@ -4795,6 +4893,19 @@ table[data-type="scale"] tr.even td {
 }
 .alert strong {
   display: block;
+}
+@media (min-width: 992px) {
+  .lt-ie10 .question .list-group {
+    margin: 0;
+    padding: 0;
+  }
+  .lt-ie10 .question .list-group .list-group-item {
+    margin: 0 0 5px !important;
+    background-color: white;
+  }
+  .lt-ie10 .question .list-group.list-group-striped .list-group-item:nth-child(even) {
+    background-color: #f9f9f9;
+  }
 }
 .fa {
   margin-right: 5px;
